Implement delete window component Pass deleteWindowValue and removeNews to delete window component Refactor news editor and delete window components

--- a/src/app/admin-panel/admin-home/news-editor/delete-window/delete-window.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/delete-window/delete-window.component.html
@@ -1,3 +1,18 @@
-<p>
-  delete-window works!
-</p>
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">OSTRZEŻENIE</h4>
+  </div>
+  <div class="modal-body container">
+    <div class="row justify-content-center mb-3 font-weight-bold">
+      Na pewno chcesz usunąć "{{ deleteWindowValue }}"?
+    </div>
+    <hr />
+    <div class="row justify-content-around">
+      <button type="button" class="btn btn-primary" (click)="removeOneNews()">
+        TAK</button
+      ><button type="button" class="btn btn-primary" (click)="modalRef.hide()">
+        ANULUJ
+      </button>
+    </div>
+  </div>
+</ng-template>
