Modify info parameter fields in editor window component Add array with info dates field in news editor component Implement formatAsInputValue function in time service Import timeservice in editor window component to use formatAsInputValue function Reimplement modal window in editor window component

--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -14,7 +14,9 @@
           <span class="row justify-content-around align-items-stop"
             ><button
               class="btn btn-primary w-25 mb-3"
-              (click)="showEditWindow(info.date, info.title, info.content, i)"
+              (click)="
+                showEditWindow(newsDates[i], info.title, info.content, i)
+              "
             >
               EDYTUJ
             </button>
