--- a/src/app/admin-panel/admin-home/news-editor/edit-window/edit-window.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/edit-window/edit-window.component.html
@@ -1,60 +1,52 @@
 <ng-template #template>
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">"{{ infoTitle }}" - EDYCJA</h4>
-      </div>
-      <div class="modal-body container">
-        <div class="row justify-content-start m-3 font-weight-bold">
-          <form id="editForm">
-            <div class="form-group">
-              <label for="infoDate">Data</label>
-              <input
-                type="date"
-                class="form-control"
-                id="infoDate"
-                name="infoDate"
-                value="{{ infoDate }}"
-              />
-            </div>
-            <div class="form-group">
-              <label for="infoTitle">Tytuł</label>
-              <input
-                type="text"
-                class="form-control"
-                id="infoTitle"
-                name="infoTitle"
-                value="{{ infoTitle }}"
-              />
-            </div>
-            <div class="form-group">
-              <label for="infoContent">Treść</label>
-              <textarea
-                rows="10"
-                cols="50"
-                type="text"
-                class="form-control"
-                id="infoContent"
-                name="infoContent"
-                form="editForm"
-                >{{ infoContent }}</textarea
-              >
-            </div>
-          </form>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">"{{ infoTitle }}" - EDYCJA</h4>
+  </div>
+  <div class="modal-body container">
+    <div class="row justify-content-start m-3 font-weight-bold">
+      <form id="editForm">
+        <div class="form-group">
+          <label for="infoDate">Data</label>
+          <input
+            type="date"
+            class="form-control"
+            id="infoDate"
+            name="infoDate"
+            value="{{ infoDate }}"
+          />
         </div>
-        <hr />
-        <div class="row justify-content-around">
-          <button type="button" class="btn btn-primary">
-            ZAPISZ</button
-          ><button
-            type="button"
-            class="btn btn-primary"
-            (click)="modalRef.hide()"
+        <div class="form-group">
+          <label for="infoTitle">Tytuł</label>
+          <input
+            type="text"
+            class="form-control"
+            id="infoTitle"
+            name="infoTitle"
+            value="{{ infoTitle }}"
+          />
+        </div>
+        <div class="form-group">
+          <label for="infoContent">Treść</label>
+          <textarea
+            rows="10"
+            cols="80"
+            type="text"
+            class="form-control"
+            id="infoContent"
+            name="infoContent"
+            form="editForm"
+            >{{ infoContent }}</textarea
           >
-            ANULUJ
-          </button>
         </div>
-      </div>
+      </form>
+    </div>
+    <hr />
+    <div class="row justify-content-around">
+      <button type="button" class="btn btn-primary">
+        ZAPISZ</button
+      ><button type="button" class="btn btn-primary" (click)="modalRef.hide()">
+        ANULUJ
+      </button>
     </div>
   </div>
 </ng-template>
