--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -1,10 +1,10 @@
 <ng-container class="container">
-  <div class="row justify-content-center mt-4">
+  <div class="row justify-content-center mt-5">
     <button class="btn btn-secondary btn-lg">
       DODAJ AKTUALNOŚĆ
     </button>
   </div>
-  <div class="row">
+  <div class="row mb-5">
     <div class="container mt-5" *ngFor="let info of news; let i = index">
       <div class="row justify-content-around">
         <span class="col col-10 card">
