--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -33,7 +33,7 @@
         [deleteWindowValue]="deleteWindowValue"
         [removeNews]="removeNews"
       ></app-delete-window>
-      <app-edit-window></app-edit-window>
+      <app-edit-window [saveNews]="saveNews"></app-edit-window>
     </div>
   </div>
 </ng-container>
