--- a/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
@@ -1,12 +1,34 @@
 <h3>Edytor galerii</h3>
+
 <div class="card">
+  <h3>Stwórz nową galerię:</h3>
   <label for="subgalleryName">Nazwa galerii: </label>
   <input type="text" id="subgalleryName" required #name />
   <label for="pictureTitle">Nazwa obrazka: </label>
   <input type="text" id="pictureTitle" required #title />
   <input type="file" (change)="uploadFile($event, name.value, title.value)" />
-  <div>{{ uploadPercent | async }}</div>
-  <a [href]="downloadURL | async">{{ downloadUrl | async }}</a>
+  <div
+    class="mb-2"
+    *ngIf="galleryService.uploadPercent !== undefined || isUploadFinished"
+  >
+    <progressbar
+      max="100"
+      [value]="isUploadFinished ? 100 : (galleryService.uploadPercent | async)"
+      type="success"
+      [striped]="!isUploadFinished"
+      [animate]="true"
+      ><i
+        >{{
+          isUploadFinished
+            ? 100
+            : (galleryService.uploadPercent | async | number: "1.0-0")
+        }}%</i
+      ></progressbar
+    >
+  </div>
+  <alert *ngIf="isUploadFinished" type="success"
+    >Wysyłanie pliku zakończone sukcesem!</alert
+  >
 </div>
 
 <div *ngFor="let gallery of galleries">
