--- a/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
@@ -6,7 +6,11 @@
   <input type="text" id="subgalleryName" required #name />
   <label for="pictureTitle">Nazwa obrazka: </label>
   <input type="text" id="pictureTitle" required #title />
-  <input type="file" (change)="uploadFile($event, name.value, title.value)" />
+  <input
+    type="file"
+    accept="image/png, image/jpeg"
+    (change)="uploadFile($event, name.value, title.value)"
+  />
   <div
     class="mb-2"
     *ngIf="galleryService.uploadPercent !== undefined || isUploadFinished"
