Reimplement getChanges method from edit window component Add showEditWindow handler for adding new infos Reimplement saveNews method in news editor component Implement saveNewInfo method Reimplement saveNews method in news service Add formatDateAsInputValue method to time service

--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -1,6 +1,6 @@
 <ng-container class="container">
   <div class="row justify-content-center mt-5">
-    <button class="btn btn-secondary btn-lg">
+    <button class="btn btn-secondary btn-lg" (click)="showEditWindow()">
       DODAJ AKTUALNOŚĆ
     </button>
   </div>
