--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -8,21 +8,23 @@
     <div class="container mt-5" *ngFor="let info of news; let i = index">
       <div class="row justify-content-around">
         <span class="col col-10 card">
-          <h5 class="card-title text-secondary mt-3">{{ info.date }}</h5>
-          <h2>{{ info.title }}</h2>
-          <p class="info-card text-truncate">{{ info.content }}</p>
+          <h5 class="card-title text-secondary mt-3">
+            {{ this.timeService.formatDate(info[1].date) }}
+          </h5>
+          <h2>{{ info[1].title }}</h2>
+          <p class="info-card text-truncate">{{ info[1].content }}</p>
           <span class="row justify-content-around align-items-stop"
             ><button
               class="btn btn-primary w-25 mb-3"
               (click)="
-                showEditWindow(newsDates[i], info.title, info.content, i)
+                showEditWindow(info[1].date, info[1].title, info[1].content, i)
               "
             >
               EDYTUJ
             </button>
             <button
               class="btn btn-danger w-25 mb-3"
-              (click)="askIfWantsToDelete(info.title, i)"
+              (click)="askIfWantsToDelete(info[1].title, i)"
             >
               USUŃ
             </button></span
