--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
@@ -1,6 +1,6 @@
-<div class="subgallery">
-  <h5 class="mb-5">{{ galleryTitle }}</h5>
-  <div class="card">
+<div class="container subgallery">
+  <h5 class="row mb-5 px-3 pt-3">{{ galleryTitle }}</h5>
+  <div class="row card mx-3 p-2">
     <span>Dodaj nowy obrazek do galerii</span>
     <label for="pictureTitle">Nazwa obrazka: </label>
     <input type="text" id="pictureTitle" required #title />
@@ -46,19 +46,21 @@
     >
   </div>
 
-  <div
-    class="col align-self-center container"
-    *ngFor="let picture of imageUrls; let i = index"
-  >
-    <img class="w-25 picture" src="{{ picture }}" alt="picture" />
-    <img
-      class="delete_icon"
-      src="../../../../../assets/img/icons/circle_delete.svg"
-      alt="delete_icon"
-      (click)="deleteImage(picture, imageTitles[i])"
-    />
-    <div class="">
-      <span>{{ imageTitles[i] }}</span>
+  <div class="row align-items-start">
+    <div
+      class="subgallery_view col-3 m-3"
+      *ngFor="let picture of imageUrls; let i = index"
+    >
+      <img class="picture" src="{{ picture }}" alt="picture" />
+      <img
+        class="delete_icon"
+        src="../../../../../assets/img/icons/circle_delete.svg"
+        alt="delete_icon"
+        (click)="deleteImage(picture, imageTitles[i])"
+      />
+      <div class="">
+        <span>{{ imageTitles[i] }}</span>
+      </div>
     </div>
   </div>
 </div>
