--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.scss
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.scss
@@ -1,21 +1,28 @@
 .subgallery {
-  margin: 10px;
-  background-color: coral;
+  margin: 10px 0 10px 0;
+  background-color: rgba($color: #ffffff, $alpha: 0.5);
+  border-radius: 25px;
 
   .upload_icon:hover,
   .delete_icon:hover {
     cursor: pointer;
   }
 
-  .container {
+  .subgallery_view {
     position: relative;
     .picture {
       position: relative;
+      width: 50%;
     }
     .delete_icon {
       position: absolute;
-      top: 30px;
-      left: 30px;
+      width: 10%;
+      top: 10px;
+      left: 10px;
     }
   }
+}
+
+.container {
+  padding: 0 -15px 0 -15px !important;
 }
