Change styling of gallery title

--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
@@ -1,5 +1,5 @@
 <div class="container subgallery">
-  <h5 class="row mb-5 px-3 pt-3">{{ galleryTitle }}</h5>
+  <h5 class="row px-3 pt-3">{{ galleryTitle }}</h5>
   <div class="row card mx-3 p-2">
     <span>Dodaj nowy obrazek do galerii</span>
     <label for="pictureTitle">Nazwa obrazka: </label>
