Show confirmation window after add/edit/delete operation

--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -36,6 +36,9 @@
         [removeNews]="removeNews"
       ></app-delete-window>
       <app-edit-window [saveNews]="saveNews"></app-edit-window>
+      <app-confirm-window
+        [showConfirmWindow]="showConfirmWindow"
+      ></app-confirm-window>
     </div>
   </div>
 </ng-container>
