--- a/src/app/admin-panel/admin-home/news-editor/confirm-window/confirm-window.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/confirm-window/confirm-window.component.html
@@ -1,3 +1,5 @@
-<p>
-  confirm-window works!
-</p>
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">POTWIERDZAM</h4>
+  </div>
+</ng-template>
