Let the progressbar appear only during upload

--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
@@ -18,10 +18,7 @@
       accept="image/png, image/jpeg"
       (change)="uploadFile($event, title.value)"
     />
-    <div
-      class="mb-2"
-      *ngIf="isSubgalleryUploadStarted || isSubgalleryUploadFinished"
-    >
+    <div class="mb-2" *ngIf="isSubgalleryUploadStarted">
       <progressbar
         max="100"
         [value]="
