--- a/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
@@ -1,6 +1,9 @@
 <section class="container p-5">
-  <h1 class="row pb-5">Zarząd fundacji</h1>
-  <article class="column" *ngFor="let person of about">
+  <h1 class="row pb-5">Edycja sekcji "O nas"</h1>
+  <div class="row justify-content-center mb-5">
+    <button class="btn btn-secondary btn-lg">DODAJ OSOBĘ</button>
+  </div>
+  <article class="card column p-5 mb-3" *ngFor="let person of about">
     <h3>{{ person.name }}</h3>
     <caption class="row pl-3">
       {{
@@ -14,5 +17,9 @@
       </p>
     </span>
     <hr />
+    <span class="row justify-content-around"
+      ><button class="btn btn-primary w-25 mb-3">EDYTUJ OSOBĘ</button
+      ><button class="btn btn-danger w-25 mb-3">USUŃ</button></span
+    >
   </article>
 </section>
