Create logic of deleting person

--- a/src/app/admin-panel/admin-home/about-editor/delete-window/delete-window.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/delete-window/delete-window.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="modal-body container">
     <div class="row justify-content-center mb-3 font-weight-bold">
-      Na pewno chcesz usunąć OSOBĘ?
+      Na pewno chcesz usunąć {{ _personToRemove.name }}?
     </div>
     <hr />
     <div class="row justify-content-around">
