--- a/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
@@ -22,11 +22,14 @@
     <span class="row justify-content-around"
       ><button class="btn btn-primary w-25 mb-3" (click)="showEditWindow()">
         EDYTUJ OSOBĘ</button
-      ><button class="btn btn-danger w-25 mb-3" (click)="showDeleteWindow()">
+      ><button
+        class="btn btn-danger w-25 mb-3"
+        (click)="showDeleteWindow(person)"
+      >
         USUŃ
       </button></span
     >
   </article>
   <about-edit-window></about-edit-window>
-  <about-delete-window></about-delete-window>
+  <about-delete-window (notify)="removePerson($event)"></about-delete-window>
 </section>
