--- a/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
@@ -20,7 +20,10 @@
     </span>
     <hr />
     <span class="row justify-content-around"
-      ><button class="btn btn-primary w-25 mb-3" (click)="showEditWindow()">
+      ><button
+        class="btn btn-primary w-25 mb-3"
+        (click)="showEditWindow(person.name)"
+      >
         EDYTUJ OSOBĘ</button
       ><button class="btn btn-danger w-25 mb-3" (click)="showDeleteWindow()">
         USUŃ
